# squat-depth-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: future-work.md  research-notes.md
examples/: README.md
notebooks/: README.md  squat_depth_mvp.ipynb
src/: README.md
src/squat_depth/: __init__.py  constraints.py  depth.py  pipeline.py  pose.py  reps.py  temporal.py  visualize.py
tests/: test_squat_depth.py
