[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "squat-depth-checker"
version = "0.1.0"
description = "Colab-friendly squat-depth checker using pose estimation and temporal consistency checks."
requires-python = ">=3.10"
dependencies = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.9.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
